fix: dark mode's gradient was updated.

--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
 }
 
 .home-wrapper-dark {
-  background: #404040;
+  background-image: linear-gradient(90deg, #352f44, #5c5470);
 }
 
 .home-dark,
@@ -36,7 +36,7 @@
 }
 
 .resume-dark {
-  background-color: #404040;
+  background-image: linear-gradient(90deg, #2a2438, #5c5470);
 }
 
 .document {
