--- a/src/Components/HeroSection.css
+++ b/src/Components/HeroSection.css
@@ -33,7 +33,7 @@ video {
 }
 
 .hero-subcontainer-dark {
-    background: #606060;
+    background-image: linear-gradient(90deg, #5c5470, #352f44);
     width: 80%;
     display: flex;
     flex-direction: row;
@@ -114,6 +114,11 @@ video {
 .hero-intro-name > h1 {
     font-size: 22px;
     text-align: center;
+    font-weight: lighter;
+}
+
+.hero-intro-name {
+    height: 50px;
 }
 
 .hero-btns {
